1) add db 2) use DTO 3) create entity taskEntity and stateEntity user OneToMany relation